# NimbleEngine

./: .clang-format  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  CMakeSettings.json  EASTL.natvis  README.md  _clang-format  clang-format.sh  compile_commands.json  meson.build  renderdoc-settings.cap
apps/: CMakeLists.txt
apps/frontend/: CMakeLists.txt
apps/frontend/src/: main.cpp
frontend/: CMakeLists.txt  meson.build
frontend/src/: main.cpp
include/nimble/: BasicShader.h  GlfwRenderLoop.h  IMesh.h  Mesh.h  MeshTools.h  RenderLoop.h
include/nimble/camera/: Camera.h  FixedPointOrbitCamera.h  FreeFlyCamera.h
include/nimble/core/: Assert.h  Colors.h  OrthographicProjection.h  Subject.h
include/nimble/engine/: Engine.h  GlfwRenderLoop.h  RenderLoop.h  Time.h
include/nimble/factory/: DefaultFactoryErrorPolicy.h  Factory.h
include/nimble/font-rendering/: Character.h  FontAtlas.h  TextRenderer.h
include/nimble/gui/: DebugWindow.h
include/nimble/input/: InputManager.h
include/nimble/light/: DirectionalLight.h  PointLight.h
include/nimble/material/: Material.h  MaterialType.h
include/nimble/opengl-wrapper/: Buffer.h  FragmentShader.h  FrameBuffer.h  GLContext.h  IShaderProgram.h  IndexBuffer.h  Sampler.h  Shader.h  ShaderInfo.h  ShaderProgram.h  Texture2D.h  Utils.h  VertexArrayObject.h  VertexBuffer.h  VertexBufferFormat.h  VertexShader.h
include/nimble/render-passes/: DebugPass.h  NonLitPass.h  PhongPass.h  RenderPass.h  ShadowPass.h
include/nimble/resource-manager/: ResourceManager.h  ShaderFactory.h
include/nimble/scene-graph/: DirectionalLightNode.h  DrawableNode.h  NullNode.h  RootSceneNode.h  SceneGraph.h  SceneNode.h  SceneState.h  TransformNode.h  Transformation.h
include/nimble/subsystem/: FileWatcherEvents.h  FileWatcherSubsystem.h  Subsystem.h
include/nimble/utility/: FileUtility.h  GlmUtility.h  ImGuiUtility.h  Macros.h  Singleton.h  StringUtility.h  StrongTypes.h
include/nimble/window/: Window.h
resources/materials/: README.md  basic.nmat  color.nmat  cube.nmat  debug_frustum.nmat  debug_line.nmat  diffuse-texture.nmat  diffuse-textured-phong.nmat  floor.nmat  grid.nmat  phong.nmat  phong_001.nmat  rock_1.nmat  rock_3.nmat  rock_4.nmat
resources/models/: cube.blend  cube.fbx  rock_1.fbx  rock_3.fbx  rock_4.fbx  suzanne.blend  suzanne.fbx  test.blend
resources/shaders/: basic.frag  basic.vert  color.frag  color.vert  diffuse-textured-phong.frag  diffuse.frag  diffuse.vert  font.frag  font.vert  grid.frag  grid.vert  phong.frag  phong.vert  shadow.frag  shadow.vert
scripts/: install-resources.py
src/: BasicShader.cpp  CMakeLists.txt  GlfwRenderLoop.cpp  Mesh.cpp  RenderLoop.cpp  meson.build
src/camera/: Camera.cpp  FixedPointOrbitCamera.cpp  FreeFlyCamera.cpp
src/engine/: Engine.cpp
src/gui/: DebugWindow.cpp
src/input/: InputManager.cpp
src/material/: Material.cpp
src/opengl-wrapper/: FragmentShader.cpp  FrameBuffer.cpp  GLContext.cpp  IndexBuffer.cpp  Sampler.cpp  Shader.cpp  ShaderProgram.cpp  Texture2D.cpp  VertexBuffer.cpp  VertexShader.cpp  glad.c
src/render-passes/: DebugPass.cpp  PhongPass.cpp  ShadowPass.cpp
src/resource-manager/: ResourceManager.cpp
src/scene-graph/: DirectionalLightNode.cpp  RootSceneNode.cpp  SceneGraph.cpp  SceneNode.cpp  Transformation.cpp
src/subsystem/: FileWatcherSubsystem.cpp
src/subsystem/linux/: FileWatcherSubsystem.cpp
src/subsystem/windows/: FileWatcherSubsystem.cpp
src/window/: Window.cpp
tests/nimble/: CMakeLists.txt  scene-graph.cpp  subject.cpp
tests/nimble/include/: catch-utils.h
